--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="stuItem text-center py-5">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="stuIcon">
                             <i class="fa-solid fa-graduation-cap"></i>
                         </div>
@@ -38,7 +38,7 @@
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic.</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-6 mt-sm-0 mt-5">
                         <div class="stuIcon">
                             <i class="fa-solid fa-users"></i>
                         </div>
@@ -47,7 +47,7 @@
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic.</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-sm-6 mt-lg-0 mt-5">
                         <div class="stuIcon">
                             <i class="fa-solid fa-graduation-cap"></i>
                         </div>
@@ -63,8 +63,8 @@
     <section class="category py-5">
         <div class="container py-5">
             <div class="cateContent">
-                <div class="col-4 "></div>
-                <div class="col-8 ">
+                <div class="col-xl-4 "></div>
+                <div class="col-xl-8 ">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="d-flex align-items-center cateItem">
@@ -72,7 +72,7 @@
                                     <i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
                                 </div>
                                 <div class="cateInfo">
-                                    <h3>Flexible Classes</h3>
+                                    <h5>Flexible Classes</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                                 </div>
                             </div>
@@ -83,7 +83,7 @@
                                     <i class="fa fa-download" aria-hidden="true"></i>
                                 </div>
                                 <div class="cateInfo">
-                                    <h3>Offline Mode</h3>
+                                    <h5>Offline Mode</h5>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                     <i class="fa fa-headphones" aria-hidden="true"></i>
                                 </div>
                                 <div class="cateInfo">
-                                    <h3>Educator Help</h3>
+                                    <h5>Educator Help</h5>
                                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
                                     <i class="fa fa-play-circle" aria-hidden="true"></i>
                                 </div>
                                 <div class="cateInfo">
-                                    <h3>Online Classes</h3>
+                                    <h5>Online Classes</h5>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
                                 </div>
                             </div>
@@ -126,25 +126,25 @@
             </p>
             <div class="numContent text-center py-5">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="numCount">
                             <span class="numitem"> 6300</span>
                             <p>LEARNERS & COUNTING</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4">
                         <div class="numCount">
                             <span class="numitem"> 638</span>
                             <p>TOTAL COURSES</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
                         <div class="numCount">
                             <span class="numitem"> 7600</span>
                             <p>SUCCESSFUL STUDENTS</p>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-sm-6 mt-lg-0 mt-4">
                         <div class="numCount">
                             <span class="numitem"> 36</span>
                             <p>LANGUAGES</p>
@@ -155,12 +155,12 @@
         </div>
     </section>
     <section class="feedback py-5">
-        <div class="container py-5">
+        <div class="container py-md-5 py-4">
             <div class="title text-center mb-3">
                 <h2> Student Community <span>Feedback</span></h2>
             </div>
-            <div class="row py-5">
-                <div class="col-4">
+            <div class="row mt-md-5 py-5">
+                <div class="col-lg-4 col-md-6 ">
                     <div class="feedText">
                         <span class="feedIcon fa fa-quote-left"></span>
                         <p>
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 mt-md-0 mt-4">
                     <div class="feedText">
                         <span class="feedIcon fa fa-quote-left"></span>
                         <p>
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 mt-lg-0 mt-4 feedBackSec">
                     <div class="feedText">
                         <span class="feedIcon fa fa-quote-left"></span>
                         <p>
