--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               <span>Studios</span>
             </p>
           </div>
-          <div class="row features text-center">
+          <div class="row justify-content-centergit features text-center">
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="feature-body">
                 <div class="feature-images">
@@ -396,7 +396,7 @@
               <span>Feedback</span>
             </p>
           </div>
-          <div class="row content_feedback mt-md-5">
+          <div class="row justify-content-center content_feedback mt-md-5">
             <div class="col-lg-4 col-md-6 feedback_sec">
               <div class="feedback_grid">
                 <p class="feedback_text">
